2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/osm-namefinder/NamedTagHandler.cpp:

    OpenstreetMap name finder returns coordinates in degree.

2008-08-04  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataStyleMap.{h|cpp}
    * src/lib/geodata/data/GeoDataFeature.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlStyleMapTagHandler.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlKeyTagHandler.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlStyleUrlTagHandler.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlPairTagHandler.{h|cpp}

    implementing the kml styleMap

    * src/lib/geodata/data/GeoDataCoordinates.h
    * src/lib/geodata/data/GeoDataDocument.h
    * src/lib/geodata/data/GeoDataGeometry.h
    * src/lib/geodata/data/GeoDataPoint.h

    documentation fixes

    * src/lib/geodata/data/Serializable.h
    * src/lib/geodata/data/GeoDataPlacemark.cpp
    * src/lib/geodata/data/GeoDataMultiGeometry.cpp

    fix some geometry flag

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarblePlacemarkModel.cpp:

    MarblePlacemarkModel does not need a PlaceMarkManager in every case,
    so make it work without one.

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/CMakeLists.txt:
    * src/lib/CMakeLists.txt:

    Add XML tag handlers for OSM name finder to build system.

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/osm-namefinder/DescriptionTagHandler.cpp:

    Add Q_ASSERT.

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/osm-namefinder/NamedTagHandler.cpp:

    Work around GeoParser bug which prevents the handler of the first
    element to be invoked.

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/osm-namefinder/SearchResultsTagHandler.cpp:

    - Remove commented out code.
    - Use GeoDataDocument instead of GeoDataContainer.
